# intercom_notifier

./: .gitignore  README.md  chime.m4a  main_entrance.m4a  pyproject.toml
src/intercom_notifier/: __init__.py  __main__.py  intercom_notifier.py
tools/: list_device_info.py  sample_fft.py
