[project]
name = "intercom-notifier"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "mitukou1109", email = "mitukou1109@gmail.com" }
]
dependencies = [
    "matplotlib>=3.9.0",
    "numpy>=1.26.4",
    "pydub>=0.25.1",
    "pyaudio>=0.2.14",
    "scipy>=1.13.0",
    "pyside6>=6.7.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/intercom_notifier"]
